<resources>
    <string name="app_name">FragmentTutorial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="one">One</string>
    <string name="night_view">Night View</string>
    <string name="convert">Convert</string>
    <string name="celcius">Celcius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature">Temperature</string>
    <string name="converted_value">Converted value</string>
</resources>
