<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celcius"
        android:layout_below="@+id/radioButton2"
        android:layout_toStartOf="@+id/convert"
        android:layout_marginTop="16dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit"
        android:layout_below="@+id/tempValue"
        android:layout_alignStart="@+id/radioButton"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/tempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/temperature"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/convertedValue"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/convert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:text="@string/converted_value"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>